--- a/ArbolesPlantas/ArbolesPlantas/Views/OrdenPagos/Create.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/OrdenPagos/Create.cshtml
@@ -1,68 +1,66 @@
 ﻿@model ArbolesPlantas.Models.ordenPago
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+	ViewBag.Title = "Generar orden de pago";
+	ViewBag.id = Model.id_factura;
+	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
+<p>
+	<a onclick="goBack()" style="cursor: pointer; color:green;">&lt;&lt; Regresar</a>
+</p>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>ordenPago</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.fecha_pago, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.fecha_pago, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.fecha_pago, "", new { @class = "text-danger" })
-            </div>
-        </div>
+	@Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.id_factura, "id_factura", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("id_factura", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.id_factura, "", new { @class = "text-danger" })
-            </div>
-        </div>
+	<div class="form-horizontal">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.cantidad_pago, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cantidad_pago, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cantidad_pago, "", new { @class = "text-danger" })
-            </div>
-        </div>
+		<div class="cotainer">
+			<div class="row justify-content-center">
+				<div class="col-md-8">
+					<div class="card">
+						<div class="card-header" style="background-color:lightblue"><h2>Orden de pago para Factura No. @ViewBag.id </h2></div>
+						<div class="card-body">
+							<div class="form-group">
+								@Html.LabelFor(model => model.id_factura, "No. de Factura", htmlAttributes: new { @class = "control-label col-md-6" })
+								<div class="col-md-4">
+									@Html.EditorFor(model => model.id_factura, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+									@Html.ValidationMessageFor(model => model.id_factura, "", new { @class = "text-danger" })
+								</div>
+							</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.cantidad_restante, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cantidad_restante, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cantidad_restante, "", new { @class = "text-danger" })
-            </div>
-        </div>
+							<div class="form-group">
+								@Html.LabelFor(model => model.cantidad_pago, "Cantidad a pagar", htmlAttributes: new { @class = "control-label col-md-6" })
+								<div class="col-md-4">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
-            </div>
-        </div>
+									@Html.EditorFor(model => model.cantidad_pago, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+									@Html.ValidationMessageFor(model => model.cantidad_pago, "", new { @class = "text-danger" })
+								</div>
+							</div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+							<div class="form-group">
+								<div class="col-md-offset-2 col-md-6" style="margin-top:10px; margin-left:37%; ">
+									<input type="submit" value="Generar pago" class="btn btn-warning" style="font-size: 15px; width:150px; color:white;" />
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br />
+	<br />
+
+	<script>
+		function goBack() {
+			window.history.back();
+		}
+	</script>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@section Scripts {
+	@Scripts.Render("~/bundles/jqueryval")
+}
