--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/Login.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/Login.cshtml
@@ -1,63 +1,85 @@
 ﻿@using ArbolesPlantas.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Iniciar sesión";
+				/**/
+
+				/**/
+
+				Layout = null;
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use una cuenta local para iniciar sesión.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Iniciar sesión" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Registrar como nuevo usuario", "Register")
-                </p>
-                @* Habilite esta opción después de habilitar la confirmación de la cuenta para la función de restablecimiento de contraseña
-                    <p>
-                        @Html.ActionLink("¿Ha olvidado su contraseña?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>Inicio</title>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+	<link rel="stylesheet" href="~/Content/css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="~/Content/css/animate.css">
+
+	<link rel="stylesheet" href="~/Content/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="~/Content/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="~/Content/css/magnific-popup.css">
+
+	<link rel="stylesheet" href="~/Content/css/aos.css">
+
+	<link rel="stylesheet" href="~/Content/css/ionicons.min.css">
+
+	<link rel="stylesheet" href="~/Content/css/bootstrap-datepicker.css">
+	<link rel="stylesheet" href="~/Content/css/jquery.timepicker.css">
+
+
+	<link rel="stylesheet" href="~/Content/css/flaticon.css">
+	<link rel="stylesheet" href="~/Content/css/icomoon.css">
+	<link rel="stylesheet" href="~/Content/css/style.css">
+</head>
+<body>
+	<br />
+	<div class="container h-100">
+		<div class=" d-flex justify-content-center h-100">
+			<div class="card">
+				<div class="d-flex justify-content-center">
+					@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+					{
+						@Html.AntiForgeryToken()
+						<center>
+							<h4>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								Iniciar sesión&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</h4>
+						</center>
+						<hr />
+						@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+						<div class="form-group">
+							&nbsp;&nbsp;&nbsp;@Html.LabelFor(m => m.Email)
+							<div class="input-group mb-3">
+								&nbsp;&nbsp;&nbsp;@Html.TextBoxFor(m => m.Email, new { @class = "form-control input_user", required = "true" })&nbsp;&nbsp;&nbsp;
+								@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+							</div>
+						</div>
+						<div class="form-group">
+							&nbsp;&nbsp;&nbsp;@Html.LabelFor(m => m.Password)
+							<div class="input-group mb-3">
+								&nbsp;&nbsp;&nbsp;@Html.PasswordFor(m => m.Password, new { @class = "form-control input_user", required = "true" })&nbsp;&nbsp;&nbsp;
+								@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-md-offset-2 col-md-10">
+								<div class="checkbox">
+									@Html.CheckBoxFor(m => m.RememberMe)
+									@Html.LabelFor(m => m.RememberMe)
+								</div>
+							</div>
+						</div>
+						<div class="d-flex justify-content-center">
+							<input type="submit" value="Iniciar sesión" class="btn btn-success" />
+						</div>
+					}
+					<br />
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
