--- a/ArbolesPlantas/ArbolesPlantas/Views/Shared/_LayoutAdmin.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Shared/_LayoutAdmin.cshtml
@@ -62,7 +62,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" style="background-color:white">
 		<div class="container">
-			<a class="navbar-brand" href="@Url.Action("Index","Home")">Plantas y Árboles</a>
+			<a class="navbar-brand" href="@Url.Action("homeAdmin","Home")">Plantas y Árboles</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
