Agregué nuevas vistas

--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ExternalLoginConfirmationViewModel
+﻿@model ProyectoFinanzas.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Registrarse";
 }
