--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/ForgotPassword.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ForgotPasswordViewModel
+﻿@model ProyectoFinanzas.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "¿Olvidó la contraseña?";
 }
