--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/Register.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.RegisterViewModel
+﻿@model ProyectoFinanzas.Models.RegisterViewModel
 @{
     ViewBag.Title = "Registrarse";
 }
