--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/SendCode.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.SendCodeViewModel
+﻿@model ProyectoFinanzas.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Enviar";
 }
