--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/VerifyCode.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.VerifyCodeViewModel
+﻿@model ProyectoFinanzas.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verificar";
 }
