--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/AddPhoneNumber.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.AddPhoneNumberViewModel
+﻿@model ProyectoFinanzas.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Número de teléfono";
 }
