--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/ChangePassword.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ChangePasswordViewModel
+﻿@model ProyectoFinanzas.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Cambiar contraseña";
 }
