--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/Index.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.IndexViewModel
+﻿@model ProyectoFinanzas.Models.IndexViewModel
 @{
     ViewBag.Title = "Gestionar";
 }
