--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/SetPassword.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.SetPasswordViewModel
+﻿@model ProyectoFinanzas.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Crear contraseña";
 }
