--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.VerifyPhoneNumberViewModel
+﻿@model ProyectoFinanzas.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verificar número de teléfono";
 }
