--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/ResetPassword.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ResetPasswordViewModel
+﻿@model ProyectoFinanzas.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Restablecer contraseña";
 }
