--- a/ArbolesPlantas/ArbolesPlantas/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ExternalLoginListViewModel
+﻿@model ProyectoFinanzas.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use otro servicio para iniciar sesión.</h4>
