--- a/ArbolesPlantas/ArbolesPlantas/Views/Manage/ManageLogins.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArbolesPlantas.Models.ManageLoginsViewModel
+﻿@model ProyectoFinanzas.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Administrar los inicios de sesión externos";
