--- a/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_NavbarPartial.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_NavbarPartial.cshtml
@@ -14,17 +14,22 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tienda</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item">Arboles</a>
-                        <a class="dropdown-item">Plantas</a>
+                        @Html.ActionLink("Árboles", "Index", "Tienda", new { categoria = "arboles" }, new { @class = "dropdown-item" })
+                        @Html.ActionLink("Plantas", "Index", "Tienda", new { categoria = "plantas" }, new { @class = "dropdown-item" })
                     </div>
                 </li>
                 <li class="nav-item">
+
                     <a href="" class="nav-link">Acerca de</a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link">Contacto</a>
                 </li>
-                <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
+                <li class="nav-item cta cta-colored">
+                    <a href="@Url.Action("ShowCarrito","Tienda")" class="nav-link">
+                        <span class="icon-shopping_cart"></span> [@ArbolesPlantas.Models.Carrito.getNumeroDeItems()]
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
