--- a/ArbolesPlantas/ArbolesPlantas/Views/Carrito/Index.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Carrito/Index.cshtml
@@ -60,7 +60,9 @@
                                             <form action="@Url.Action("eliminarDelCarrito","Tienda")" method="POST">
                                                 @Html.AntiForgeryToken()
                                                 <input type="hidden" name="id" value="@item.id" />
-                                                <button type="submit"><span class="ion-ios-close"></span></button>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <span class="text-white">Eliminar</span>
+                                                </button>
                                             </form>
                                         </td>
 
@@ -91,9 +93,9 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-6 mt-5 cart-wrap ftco-animate">
+            <div class="col-lg-3 mt-5 cart-wrap ftco-animate">
                 <div class="cart-total mb-3">
-                    <h3>Cart Totals</h3>
+                    <h3 class="text-center">Total del carrito</h3>
                     <p class="d-flex">
                         <span>Subtotal</span>
                         <span>$@carrito.getSubTotal()</span>
@@ -108,7 +110,14 @@
                         <span>$@carrito.getTotal()</span>
                     </p>
                 </div>
-                <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+                @if (Carrito.getNumeroDeItems() != 0)
+                {
+                    <form action="@Url.Action("Index","Pagos")" method="POST">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" value="@carrito.getTotal()" name="monto" />
+                        <input class="btn btn-dark" type="submit" value="Ir a pagar" />
+                    </form>
+                }
             </div>
         </div>
     </div>
