--- a/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_Layout.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @RenderSection("styles", required: false)
 </head>
@@ -30,6 +31,7 @@
     <script src="~/Scripts/bootstrap-datepicker.js"></script>
     <script src="~/Scripts/scrollax.min.js"></script>
     <script src="~/Scripts/main.js"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/card/2.4.0/card.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
