--- a/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_NavbarPartial.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Shared/alan/_NavbarPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@* NAVBAR*@
+﻿@using System.Text.RegularExpressions
+
+@* NAVBAR*@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
         @Html.ActionLink("Venta de plantas", "Index", "Home", new { }, new { @class = "navbar-brand" })
@@ -8,7 +10,7 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     @Html.ActionLink("Inicio", "Index", "Home", new { }, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item dropdown">
