--- a/ArbolesPlantas/ArbolesPlantas/Views/Tienda/Index.cshtml
+++ b/ArbolesPlantas/ArbolesPlantas/Views/Tienda/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Catálogo de " + ViewBag.categoria;
     Layout = "~/Views/Shared/alan/_Layout.cshtml";
 }
 
